--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-school-editInfo.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-school-editInfo.vm
@@ -1,5 +1,13 @@
 ##<!-- $Header: /cvs/sakai2/legacy/tools/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfo.vm,v 1.3 2005/05/23 04:04:12 ggolden.umich.edu Exp $ -->
 ## Edit Site Information
+
+	<style>
+		#classInformationForm fieldset {
+			border: 2px solid var(--sakai-text-color-1);
+			padding: 1em;
+			position: relative;
+		}
+	</style>
 <div class="portletBody container-fluid">
 	#if($menu)#toolbar($menu)#end
 	## header for edit site information page
